# monkeyland

./: .gitignore  README.md  index.html  monkeyland.md  package-lock.json  package.json  tsconfig.json  vite.config.ts
.cursor/rules/: architecture-context.mdc  beads-cli-reference.mdc  monkeyland-architecture.mdc  workflow-tasks.mdc
.github/workflows/: ci.yml
docs/: CONTEXT.md  LAUNCH_CHECKLIST.md  banana-assets.md  beads-setup.md
docs/tasks/: README.md  _template.md
scripts/: browser-server.mjs  validate-no-console-errors.mjs
src/: App.css  App.event-contract.test.ts  App.tsx  agentPrompts.test.ts  agentPrompts.ts  agentRunner.test.ts  agentRunner.ts  beadsPreflight.ts  costStore.test.ts  costStore.ts  index.css  main.tsx  orchestratorPrompt.ts  pmValidation.test.ts  pmValidation.ts  projectInspection.test.ts  projectInspection.ts  types.test.ts  types.ts  validatorSafety.test.ts  validatorSafety.ts  wmE2e.test.ts  wmIntents.ts  wmReducer.test.ts  wmReducer.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: agent_registry.rs  agent_state_machine.rs  browser_pool.rs  coalescing.rs  commands.rs  developer_phases.rs  lib.rs  local_proxy.rs  main.rs  orchestration.rs  pm_phases.rs  project.rs  pty_pool.rs  storage.rs  wm_brain.rs  wm_commands_inner.rs  wm_phases.rs  worktree.rs
src/components/: BeadsCard.tsx  BeadsDependencyGraph.tsx  BeadsTaskCard.tsx  BrowserCard.tsx  Canvas.tsx  CustomSelect.tsx  DebugPanel.css  DebugPanel.tsx  FPSCounter.css  (+15 more)
tasks/: name-severity.md  refine.md
(+48 files in other folders)
