[package]
name = "monkeyland"
version = "0.1.0"
description = "Agent Canvas — 20 concurrent agents with terminals and browsers"
authors = ["Monkeyland"]
edition = "2021"
rust-version = "1.70"

[lib]
name = "monkeyland_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
arboard = "3"
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.32", features = ["bundled"] }
ulid = "1"
chrono = { version = "0.4", features = ["serde"] }
tokio = { version = "1", features = ["sync", "time"] }
portable-pty = "0.8"
tauri-plugin-http = "2"
reqwest = { version = "0.13.2", features = ["json", "stream"] }
axum = "0.7.9"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
